<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_dark">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPopular"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_20"
        android:background="@drawable/custom_hot_screen_button"
        android:text="@string/popular"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_12"
        app:layout_constraintRight_toLeftOf="@+id/btnTopRate"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTopRate"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_35"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/custom_hot_screen_button_not_click"
        android:text="@string/top_rate"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpComing"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_35"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_toEndOf="@+id/btnTopRate"
        android:background="@drawable/custom_hot_screen_button_not_click"
        android:text="@string/up_coming"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12"
        app:layout_constraintLeft_toRightOf="@+id/btnTopRate"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHotMovie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@color/blue_dark"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/btnTopRate"
        app:spanCount="2" />
</androidx.constraintlayout.widget.ConstraintLayout>
